--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,17 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Show build output
+        run: |
+          pwd
+          ls -la
+          echo "--- dist contents ---"
+          ls -la dist
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: Frontend/dist
+          path: ./Frontend/dist
 
   deploy:
     needs: build
