--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://zprototyp.github.io/PrototypeForGitHubPages/Frontend/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "jotai": "^2.12.5",
