--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "PrototypeForGitHubPages",
   "homepage": "https://zprototyp.github.io/PrototypeForGitHubPages/",
   "private": true,
   "version": "0.0.0",
