Lowercase for name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PrototypeForGitHubPages",
+  "name": "prototypeforgithubpages",
   "homepage": "https://zprototyp.github.io/PrototypeForGitHubPages/",
   "private": true,
   "version": "0.0.0",
